--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,5 +17,5 @@ phases:
   post_build:
     commands:
       - echo "Updating lambda Function..."
-      - aws lambda update-function-code --function-name test-search-photo900 --zip-file fileb://deployment_package.zip
+      - aws lambda update-function-code --function-name search-photo-final-1 --zip-file fileb://deployment_package.zip
       - echo "DONE!!"
